# MeshLib

./: .cursorignore  .gitignore  CMakeLists.txt  CMakePresets-backup.json  CMakePresets.json  README_ToolPathPlugin.md
.cursor/rules/: agent-general.mdc  ask-general.mdc  log-rule.mdc
docs/: CuttingSimulationProposal.md  HeatMethodGeodesicDistance.md  需求分析.md
source/MRCommonPlugins/: CMakeLists.txt
source/MRMesh/: CMakeLists.txt  MRMeshFwd.h
source/MRMeshC/: CMakeLists.txt
source/MRTest/: CMakeLists.txt
source/MRViewer/: CMakeLists.txt  MRToolPath.items.json  MRToolPath.ui.json  MRToolPathPlugin.cpp  MRToolPathPlugin.h  MRViewerPluginsList.h.in
source/MRVoxels/: CMakeLists.txt
test/: TestToolPathPlugin.py
